--- a/style.css
+++ b/style.css
@@ -153,11 +153,29 @@ nav .fa{
     background: transparent;
 }
 
+.header-line{
+    display: block;
+    width: 150px;
+    height: 6px;
+    background: white;
+    margin: 15px auto;
+    border-radius: 10px;
+}
+
 .whoAreWe{
     margin: auto;
     text-align: auto;
     text-align: center;
     margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.team-photo img{
+    display: block;
+    position: center;
+    margin: auto;
+    width: 60%;
+    border-radius: 10px;
 }
 
 .goal{
@@ -182,7 +200,7 @@ nav .fa{
     width: 100%;
     text-align: center;
     padding: 20px 0;
-    background-color: #4c2a87;
+    background-color: black;
 }
 
 .footer p{
