--- a/style.css
+++ b/style.css
@@ -61,6 +61,32 @@ nav img{
     width: 100%;
 }
 
+/*For dropdown*/
+.dropdown{
+    display: inline-block;
+}
+
+#dropdown-options {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  
+#dropdown-options a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
+
+.dropdown:hover #dropdown-options{
+	display:block;
+}
+
 .text-box{
     width: 90%;
     color: #fff;
