--- a/style.css
+++ b/style.css
@@ -67,7 +67,9 @@ nav img{
 }
 
 #dropdown-options {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 1s linear;
     position: absolute;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -81,10 +83,16 @@ nav img{
     text-decoration: none;
     text-align: center;
     display: block;
+    transition: 0.5s;
 }
 
 .dropdown:hover #dropdown-options{
-	display:block;
+    visibility: visible;
+    opacity: 1;
+}
+
+#dropdown-options a:hover{
+    color: #693EB2;
 }
 
 .text-box{
