--- a/style.css
+++ b/style.css
@@ -333,15 +333,15 @@ nav .fa{
     font-size: 20px;
 }
 
-/*Teams Section*/
-/*.teams{
+/*Subsystem Section*/
+.subsystem{
     width: 80%;
     margin: auto;
     text-align: auto;
     text-align: center;
 }
 
-.team-col{
+.subsystem-col{
     flex-basis: 24%;
     max-width: 24%;
     border-radius: 10px;
@@ -350,15 +350,7 @@ nav .fa{
     overflow: hidden;
 }
 
-p{
-    color: #777;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 22px;
-    padding: 10px;
-}
-
-.team-col img{
+.subsystem-col img{
     width: 100%;
     height: 100%;
     display: block;
@@ -376,17 +368,20 @@ p{
 
 .layer:hover{
     background: #683eb286;
+    cursor: pointer;
 }
 
 .layer h3{
     width: 100%;
     font-weight: 500;
     color: #fff;
-    font-size: 26px;
+    background: transparent;
+    font-size: 40px;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
+    text-align: center;
     opacity: 0;
     transition: 0.5s;
 }
@@ -394,4 +389,68 @@ p{
 .layer:hover h3{
     bottom: 49%;
     opacity: 1;
+}
+
+#jump{
+    position: absolute;
+    bottom: -100px;
+}
+
+#mechanical-hook, #electrical-hook, #software-hook, #business-hook{
+    width: 70%;
+    margin: auto;
+    position: center;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #4c2a87;
+    margin-bottom: 10px;
+    display: none;
+}
+
+.hook-img-col{
+    flex-basis: 38%;
+    max-width: 38%;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.hook-blurb-col{
+    flex-basis: 58%;
+    background-color: transparent;
+}
+
+.hook-blurb-col h1{
+    text-align: center;
+    margin: auto;
+    color: white;
+    background: transparent;
+    font-size: 50px;
+}
+
+/*.exec{
+    width: 80%;
+    margin: auto;
+    text-align: auto;
+    text-align: center;
+}
+
+.exec-col{
+    flex-basis: 24%;
+    max-width: 200px;
+    min-width: 200px;
+    position: relative;
+    overflow: hidden;
+    background: #4c2a87;
+}
+
+.exec-col img{
+    width: 100%;
+    max-width: 200px;
+    position: left;
 }*/
+
+#mechanical-hook img, #electrical-hook img, #software-hook img, #business-hook img{
+    width: 100%;
+    height: 100%;
+}
