--- a/style.css
+++ b/style.css
@@ -1,58 +1,72 @@
 *{
     margin: 0;
     padding: 0;
-    background: black;
+    background: white;
     font-family: 'Poppins', sans-serif;
-}
-
-h1, h2, h3, h4, a {
+  }
+  
+  :root {
+    --primary-color: #693EB2; /* Primary theme color */
+    --hover-color: #5a30a0; /* Hover state color */
+    --text-color: #333; /* Primary text color */
+    --background-color: #fff; /* Background color */
+  }
+  
+  h1, h2, h3, h4, a {
     font-family: 'Handjet', cursive;
-}
-
-.header{
+  }
+  
+  .header{
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/MarsRover.png);
     background-position: center;
     background-size: cover;
     position: relative;
-}
-
-nav{
+  }
+  
+  nav{
     top: 0;
     display: flex;
-    padding: 1% 6%;
+    padding: 0.5% 6%;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: white;
     width: 90vw;
     position: fixed;
     z-index: 5;
-}
-
-nav img{
+    vertical-align: bottom;
+  }
+  
+  nav img{
     width: 130px;
-}
-
-.nav-links{
+  }
+  
+  .nav-links{
     flex: 1;
     text-align: right;
-}
-
-.nav-links ul li{
+    vertical-align: bottom;
+    transition: 0.5s;
+  }
+  
+  .nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 2px 30px;
     position: relative;
-}
-
-.nav-links ul li a{
-    color: #fff;
+  }
+  
+  .nav-links ul{
+    height: 100%;
+  }
+  
+  .nav-links ul li a{
+    color: #444;
     text-decoration: none;
-    font-size: 25px;
-}
-
-.nav-links ul li::after{
+    font-size: 35px;
+  }
+  
+  .nav-links ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -60,18 +74,27 @@ nav img{
     display: block;
     margin: auto;
     transition: 0.5s;
-}
-
-.nav-links ul li:hover::after{
+  }
+  
+  .nav-links ul li:hover{
+    transition: 0.5s;
+    transform: scale(1.2)
+  }
+  
+  .nav-links ul li:hover::after{
     width: 100%;
-}
-
-/*For dropdown*/
-.dropdown{
+  }
+  
+  .nav-links ul li a:hover {
+    color: var(--hover-color);
+  }
+  
+  /*For dropdown*/
+  .dropdown{
     display: inline-block;
-}
-
-#dropdown-options {
+  }
+  
+  #dropdown-options {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s, opacity 1s linear;
@@ -82,25 +105,25 @@ nav img{
   }
   
   
-#dropdown-options a {
+  #dropdown-options a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
     text-align: center;
     display: block;
     transition: 0.5s;
-}
-
-.dropdown:hover #dropdown-options{
+  }
+  
+  .dropdown:hover #dropdown-options{
     visibility: visible;
     opacity: 1;
-}
-
-#dropdown-options a:hover{
+  }
+  
+  #dropdown-options a:hover{
     color: #693EB2;
-}
-
-.text-box{
+  }
+  
+  .text-box{
     width: 90%;
     color: #fff;
     position: absolute;
@@ -109,40 +132,44 @@ nav img{
     transform: translate(-50%,-50%);
     text-align: center;
     background: transparent;
-}
-
-.text-box h1{
-    font-size: 62px;
+  }
+  
+  .text-box h1{
+    font-size: 125px;
     margin: 0px 0 40px;
     background: transparent;
-}
-
-nav .fa{
+  }
+  
+  nav .fa{
     display: none;
-}
-
-/*Buttons*/
-.hero-btn{
+  }
+  
+  /*Buttons*/
+  .hero-btn{
     display: inline-block;
     text-decoration: none;
-    color: #fff;
-    padding: 12px 54px;
-    font-size: 16px;
-    background: #4c2a87;
+    color: #444;
+    padding: 10px 54px;
+    font-size: 25px;
+    background: #e0e0e0;
     border-radius: 20px;
     position: relative;
-}
-
-.hero-btn:hover{
-    background: #243391;
-    transition: 1s;
-}
-
-@media(max-width: 800px){
+    border: 2px solid #444;
+    transition: transform 0.3s ease;
+  }
+  
+  .hero-btn:hover{
+    background: #693EB2;
+    color: white;
+    border-color: white;
+    transform: scale(1.15);
+  }
+  
+  @media(max-width: 800px){
     .nav-links ul li{
         display: block;
     }
-
+  
     .nav-links{
         position: fixed;
         background: black;
@@ -154,7 +181,7 @@ nav .fa{
         z-index: 2;
         transition: 1s;
     }
-
+  
     nav .fa{
         display: block;
         color: #fff;
@@ -162,14 +189,14 @@ nav .fa{
         font-size: 22px;
         cursor: pointer;
     }
-
+  
     .nav-links ul{
         padding: 30px;
     }
-}
-
-/*Blurbs Section*/
-.indexBlurbBox {
+  }
+  
+  /*Blurbs Section*/
+  .indexBlurbBox {
     width: 80%;
     margin-top: 2%;
     margin: auto;
@@ -177,68 +204,68 @@ nav .fa{
     padding: 10px;
     border-radius: 10px;
     background: #4c2a87;
-}
-
-.indexBlurbBox h2{
+  }
+  
+  .indexBlurbBox h2{
     color: #fff;
     font-size: 36px;
     text-align: auto;
     text-align: center;
     background: transparent;
-}
-
-.indexBlurbBox p{
+  }
+  
+  .indexBlurbBox p{
     color: #fff;
     font-size: 15px;
     background: transparent;
-}
-
-.header-line{
+  }
+  
+  .header-line{
     display: block;
     width: 150px;
     height: 6px;
     background: white;
     margin: 15px auto;
     border-radius: 10px;
-}
-
-.whoAreWe{
+  }
+  
+  .whoAreWe{
     margin: auto;
     text-align: auto;
     text-align: center;
     margin-top: 2%;
     margin-bottom: 2%;
-}
-
-.team-photo img{
+  }
+  
+  .team-photo img{
     display: block;
     position: center;
     margin: auto;
     width: 60%;
     border-radius: 10px;
-}
-
-.goal{
+  }
+  
+  .goal{
     margin: auto;
     text-align: auto;
     text-align: center;
     margin-top: 2%;
     margin-bottom: 2%;
-}
-
-.row{
+  }
+  
+  .row{
     margin-top: 2%;
     display: flex;
     justify-content: space-between;
-}
-
-/*Footer section*/
-.footer *{
+  }
+  
+  /*Footer section*/
+  .footer *{
     background: transparent;
     color: white;
-}
-
-.footer{
+  }
+  
+  .footer{
     text-align: center;
     width: 80%;
     margin-top: 2%;
@@ -247,38 +274,38 @@ nav .fa{
     padding: 10px;
     border-radius: 10px;
     background: #4c2a87;
-}
-
-.footer h2{
+  }
+  
+  .footer h2{
     padding-top: 10px;
     font-size: 30px;
-}
-
-.footer h3{
+  }
+  
+  .footer h3{
     padding: 20px;
     font-size: 20px;
-}
-
-#contact-btn{
+  }
+  
+  #contact-btn{
     background: black;
-}
-
-#contact-btn:hover{
+  }
+  
+  #contact-btn:hover{
     color: #4c2a87;
-    transition: 1s;
-}
-
-.icons-container{
+    transition: 0.5s;
+  }
+  
+  .icons-container{
     position: center;
     margin: auto;
     display: flex;
     justify-content: space-between;
     width: 20%;
     padding: 30px;
-}
-
-/*----Subsequent pages----*/
-.sub-header{
+  }
+  
+  /*----Subsequent pages----*/
+  .sub-header{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/TeamPicSub.png);
@@ -286,82 +313,82 @@ nav .fa{
     background-size: cover;
     text-align: center;
     color: #fff;
-}
-
-.sub-header h1{
+  }
+  
+  .sub-header h1{
     position: relative;
     font-size: 80px;
     top: 200px;
     text-align: center;
     background-color: transparent;
-}
-
-#mechanical-page, #electrical-page, #software-page, #business-page{
+  }
+  
+  #mechanical-page, #electrical-page, #software-page, #business-page{
     height: 40vh;
     background-image: none;
-}
-
-/*----Team page----*/
-.exec *{
+  }
+  
+  /*----Team page----*/
+  .exec *{
     color: white;
     background-color: transparent;
     padding: 2%;
-}
-
-.exec{
+  }
+  
+  .exec{
     width: 80%;
     margin: auto;
     text-align: auto;
     text-align: center;
-}
-
-.exec-col{
+  }
+  
+  .exec-col{
     flex-basis: 24%;
     max-width: 200px;
     min-width: 200px;
     position: relative;
     overflow: hidden;
     background: #4c2a87;
-}
-
-.exec-col img{
+  }
+  
+  .exec-col img{
     width: 100%;
     max-width: 200px;
     position: left;
-}
-
-.exec h1{
+  }
+  
+  .exec h1{
     font-size: 30px;
-}
-
-.exec h4{
+  }
+  
+  .exec h4{
     font-size: 20px;
-}
-
-/*Subsystem Section*/
-.subsystem{
+  }
+  
+  /*Subsystem Section*/
+  .subsystem{
     width: 80%;
     margin: auto;
     text-align: auto;
     text-align: center;
-}
-
-.subsystem-col{
+  }
+  
+  .subsystem-col{
     flex-basis: 24%;
     max-width: 24%;
     border-radius: 10px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
-}
-
-.subsystem-col img{
+  }
+  
+  .subsystem-col img{
     width: 100%;
     height: 100%;
     display: block;
-}
-
-.layer{
+  }
+  
+  .layer{
     background: transparent;
     height: 100%;
     width: 100%;
@@ -369,14 +396,14 @@ nav .fa{
     top: 0;
     left: 0;
     transition: 0.5s;
-}
-
-.layer:hover{
+  }
+  
+  .layer:hover{
     background: #683eb286;
     cursor: pointer;
-}
-
-.layer h3{
+  }
+  
+  .layer h3{
     width: 100%;
     font-weight: 500;
     color: #fff;
@@ -389,19 +416,19 @@ nav .fa{
     text-align: center;
     opacity: 0;
     transition: 0.5s;
-}
-
-.layer:hover h3{
+  }
+  
+  .layer:hover h3{
     bottom: 49%;
     opacity: 1;
-}
-
-#jump{
+  }
+  
+  #jump{
     position: absolute;
     bottom: -100px;
-}
-
-#mechanical-hook, #electrical-hook, #software-hook, #business-hook{
+  }
+  
+  #mechanical-hook, #electrical-hook, #software-hook, #business-hook{
     width: 70%;
     margin: auto;
     position: center;
@@ -410,60 +437,80 @@ nav .fa{
     background-color: #4c2a87;
     margin-bottom: 10px;
     display: flex;
-}
-
-.hook-img-col{
+  }
+  
+  .hook-img-col{
     flex-basis: 38%;
     max-width: 38%;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-}
-
-.hook-blurb-col{
+  }
+  
+  .hook-blurb-col{
     flex-basis: 58%;
     background-color: transparent;
     text-align: center;
-}
-
-.hook-blurb-col h1{
+  }
+  
+  .hook-blurb-col h1{
     margin: auto;
     color: white;
     background: transparent;
     font-size: 50px;
-}
-
-.hook-blurb-col p{
+  }
+  
+  .hook-blurb-col p{
     margin: auto;
     color: white;
     background: transparent;
     font-size: 18px;
     padding: 3%
-}
-
-#mechanical-hook img, #electrical-hook img, #software-hook img, #business-hook img{
+  }
+  
+  #mechanical-hook img, #electrical-hook img, #software-hook img, #business-hook img{
     width: 100%;
     height: 100%;
-}
-
-#hook-more-btn {
+  }
+  
+  #hook-more-btn {
     background: black;
-}
-
-#hook-more-btn:hover{
+  }
+  
+  #hook-more-btn:hover{
     color: #4c2a87;
     transition: 1s;
-}
-
-/*Subsystem Pages*/
-.overview{
+  }
+  
+  /*Subsystem Pages*/
+  .overview{
     width: 80%;
     margin: auto;
     padding: 30px;
-}
-
-.overview h1{
+  }
+  
+  .overview h1{
     background-color: transparent;
     font-size: 50px;
     color: white;
-}
+  }
+  
+  /*For loading fonts*/
+  @font-face {
+    font-family: 'Handjet';
+    font-style: normal;
+    font-weight: 500;
+    src: url('fonts/handjet.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+  
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('fonts/poppins.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+  
+  
+  /* ////////////////////////////////////////////////////////////////////////////////// */
