--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@
     position: relative;
   }
   
+#magic {
+
+    width: 100%;
+    height: 100vh;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background-color: white;
+  }
+  
   nav{
     top: 0;
     display: flex;
