--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@
     position: relative;
   }
   
-#magic {
-
+  /*Fancy title aka magic lol*/
+  #magic {
+  
     width: 100%;
     height: 100vh;
     display: block;
@@ -36,6 +37,49 @@
     background-color: white;
   }
   
+  
+  /* super cool link hover effects! */
+  
+  /*Cool down arrow*/
+  
+  .down-arrow {
+    position: absolute;
+    top: calc(100vh - 60px);
+    left: calc(50% - 14px);
+    width: 0;
+    height: 30px;
+    border: 2px solid;
+    border-radius: 2px;
+    animation: jumpInfinite 3.5s infinite;
+  }
+  
+  .down-arrow:after {
+    content: " ";
+    position: absolute;
+    top: 12px;
+    left: -10px;
+    width: 16px;
+    height: 16px;
+    border-bottom: 4px solid;
+    border-right: 4px solid;
+    border-radius: 4px;
+    transform: rotateZ(45deg);
+  }
+  
+  @keyframes jumpInfinite {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: 20px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  
+  
+  /*Nav stuff*/
   nav{
     top: 0;
     display: flex;
@@ -55,15 +99,15 @@
   
   .nav-links{
     flex: 1;
-    text-align: right;
+    text-align: center;
     vertical-align: bottom;
-    transition: 0.5s;
+    
   }
   
   .nav-links ul li{
     list-style: none;
     display: inline-block;
-    padding: 2px 30px;
+    padding: 2px 5px;
     position: relative;
   }
   
@@ -74,30 +118,73 @@
   .nav-links ul li a{
     color: #444;
     text-decoration: none;
-    font-size: 35px;
+    font-size: 30px;
   }
   
-  .nav-links ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #693EB2;
+  
+  .nav-links a {
+    position: relative;
+    line-height: 40px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: black;
+    padding: 2px 30px;
+    display: inline-block;
+    width: 125px;
+    overflow: hidden;
+  }
+  
+  .nav-links a > span {
+    position: relative;
     display: block;
-    margin: auto;
-    transition: 0.5s;
+    height: 20px;
+    overflow: hidden;
+    transition: transform 0.3s;
+    transition-delay: 0.1s;
   }
   
-  .nav-links ul li:hover{
-    transition: 0.5s;
-    transform: scale(1.2)
-  }
-  
-  .nav-links ul li:hover::after{
+  .nav-links a > span > span {
+    font-family: 'Handjet', cursive;
+    font-weight: 5500;
+    top: 0;
+    left: 0;
+    position: absolute;
+    text-align: center;
     width: 100%;
   }
   
-  .nav-links ul li a:hover {
-    color: var(--hover-color);
+  .nav-links a > span.bottom > span {
+    top: auto;
+    bottom: 0;
+    text-align: center;
+  }
+  
+  .nav-links a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    
+    transform: translate3d(-150%, -50%,0);
+    transition: transform 0.3s;
+  }
+  
+  .nav-links a:hover::after {
+    transform: translate3d(-50%, -50%, 0);
+  }
+  
+  
+  .nav-links a:hover .top{
+    transform: translate3d(5%, 0, 0);
+  }
+  
+  
+  .nav-links a:hover .bottom{
+    transform: translate3d(-5%, 0, 0);
   }
   
   /*For dropdown*/
@@ -117,7 +204,7 @@
   
   
   #dropdown-options a {
-    color: white;
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     text-align: center;
@@ -524,4 +611,4 @@
   }
   
   
-  /* ////////////////////////////////////////////////////////////////////////////////// */
+  
