--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ img {
   display: block;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
 :root {
   --primary-color: #693EB2; /* Primary theme color */
   --hover-color: #5a30a0; /* Hover state color */
@@ -511,120 +515,118 @@ nav .fa{
 }
 
 /*Subsystem Section*/
-.subsystem{
-  width: 80%;
-  margin: auto;
-  text-align: auto;
-  text-align: center;
-}
 
-.subsystem-col{
-  flex-basis: 24%;
-  max-width: 24%;
-  border-radius: 10px;
-  margin-bottom: 30px;
-  position: relative;
-  overflow: hidden;
-}
-
-.subsystem-col img{
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.layer{
+.aboutblurb {
+  line-height: 1.5em;
   background: transparent;
-  height: 100%;
+}
+
+
+.aboutcontainer {
+  padding: 40px 80px;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+}
+
+.card-wrap {
+  background: transparent;
+  margin: 10px;
+  transform: perspective(800px);
+  transform-style: preserve-3d;
+  cursor: pointer;
+}
+.card-wrap:hover .card-info {
+  transform: translateY(0);
+}
+.card-wrap:hover .card-info p {
+  opacity: 1;
+}
+.card-wrap:hover .card-info, .card-wrap:hover .card-info p {
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.card-wrap:hover .card-info:after {
+  transition: 5s cubic-bezier(0.23, 1, 0.32, 1);
+  opacity: 1;
+  transform: translateY(0);
+}
+.card-wrap:hover .card-bg {
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
+  opacity: 0.8;
+}
+.card-wrap:hover .card {
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.card {
+  position: relative;
+  flex: 0 0 auto;
+  width: 80%;
+  height: 400px;
+  background-color: #333;
+  overflow: hidden;
+  border-radius: 10px;
+  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  margin: 0 auto;
+}
+
+.card-bg {
+  opacity: 0.5;
+  position: absolute;
+  top: -20px;
+  left: -20px;
   width: 100%;
+  height: 100%;
+  padding: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  pointer-events: none;
+}
+
+.card-info {
+  background: transparent;
+  width: 100%;
+  padding: 20px;
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  transform: translateY(40%);
+  transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+
+  white-space: initial;
+
+}
+.card-info p {
+  width: 90%;
+  opacity: 0;
+  transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.card-info * {
+  position: relative;
+  z-index: 1;
+}
+.card-info:after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
-  transition: 0.5s;
-}
-
-.layer:hover{
-  background: #683eb286;
-  cursor: pointer;
-}
-
-.layer h3{
-  width: 100%;
-  font-weight: 500;
-  color: #fff;
-  background: transparent;
-  font-size: 40px;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  position: absolute;
-  text-align: center;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.layer:hover h3{
-  bottom: 49%;
-  opacity: 1;
-}
-
-#jump{
-  position: absolute;
-  bottom: -100px;
-}
-
-#mechanical-hook, #electrical-hook, #software-hook, #business-hook{
-  width: 70%;
-  margin: auto;
-  position: center;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: #4c2a87;
-  margin-bottom: 10px;
-  display: flex;
-}
-
-.hook-img-col{
-  flex-basis: 38%;
-  max-width: 38%;
-  border-radius: 10px;
-  position: relative;
-  overflow: hidden;
-}
-
-.hook-blurb-col{
-  flex-basis: 58%;
-  background-color: transparent;
-  text-align: center;
-}
-
-.hook-blurb-col h1{
-  margin: auto;
-  color: white;
-  background: transparent;
-  font-size: 50px;
-}
-
-.hook-blurb-col p{
-  margin: auto;
-  color: white;
-  background: transparent;
-  font-size: 18px;
-  padding: 3%
-}
-
-#mechanical-hook img, #electrical-hook img, #software-hook img, #business-hook img{
+  z-index: 0;
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
+  background-blend-mode: overlay;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
-#hook-more-btn {
-  background: black;
-}
-
-#hook-more-btn:hover{
-  color: #4c2a87;
-  transition: 1s;
+.card-info h1 {
+  font-family: "Playfair Display";
+  font-size: 36px;
+  font-weight: 700;
+  background: transparent;
 }
 
 /*Subsystem Pages*/
@@ -640,6 +642,294 @@ nav .fa{
   color: white;
 }
 
+/*Sponsor Page*/
+
+#contact {
+  width: 100%;
+  height: 100%;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.section-header {
+  text-align: center;
+  margin: 0 auto;
+  padding: 40px 0;
+  font: 300 60px 'Handjet', sans-serif;
+  color: #000;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+  max-width: 840px;
+}
+
+/* Left contact page */
+.form-horizontal {
+  /*float: left;*/
+  max-width: 400px;
+  font-family: 'Handjet';
+  font-weight: 400;
+}
+
+.form-control, 
+textarea {
+  max-width: 400px;
+  background-color: #fff;
+  color: #000;
+  letter-spacing: 1px;
+  padding: 5px;
+}
+
+.form-control {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.send-button {
+  margin-top: 15px;
+  height: 34px;
+  width: 400px;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+}
+
+.alt-send-button {
+  width: 400px;
+  padding: 5px;
+  height: 34px;
+  transition: all .2s ease-in-out;
+}
+
+.send-text {
+  display: block;
+  margin-top: 10px;
+  font: 700 12px 'Handjet', sans-serif;
+  letter-spacing: 2px;
+}
+
+.alt-send-button:hover {
+  transform: translate3d(0px, -25px, 0px);
+}
+
+/* Begin Right Contact Page */
+.direct-contact-container {
+  max-width: 400px;
+}
+
+/* Location, Phone, Email Section */
+.contact-list {
+  list-style-type: none;
+  margin-left: -30px;
+  padding-right: 20px;
+}
+
+.list-item {
+  line-height: 4;
+  color: #1e1e1e;
+}
+
+.contact-text {
+  font: 300 18px 'Handjet', sans-serif;
+  letter-spacing: 1.9px;
+  color: #1e1e1e;
+}
+
+.place {
+  margin-left: 62px;
+}
+
+.phone {
+  margin-left: 56px;
+}
+
+.gmail {
+  margin-left: 53px;
+}
+
+.contact-text a {
+  color: #1e1e1e;
+  text-decoration: none;
+  transition-duration: 0.2s;
+}
+
+.contact-text a:hover {
+  color: #000000;
+  text-decoration: none;
+}
+
+
+/* Social Media Icons */
+.social-media-list {
+  position: relative;
+  font-size: 22px;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.social-media-list li a {
+  color: #000;
+  transition: all .2s ease-in-out;
+}
+
+.social-media-list li {
+  position: relative; 
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 10px 3px;
+  line-height: 60px;
+  border-radius: 50%;
+  color: #000;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer; 
+  transition: all .2s ease-in-out;
+  border: 1px solid #000;
+}
+
+.social-media-list li a{
+  z-index: 99999;
+}
+
+.social-media-list li i {
+  font-size: 30px; /* Adjust the size of the icon */
+  line-height: 60px; /* Center vertically */
+  vertical-align: middle;
+  background: transparent;
+}
+
+.social-media-list li:after {
+  /* content: ''; Keeping line here bc it took me 3 hrs to delete */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: 0 0 0 1px #fff;
+  transition: all .2s ease-in-out;
+}
+
+.social-media-list li:hover {
+  background-color: #000; 
+}
+
+.social-media-list li:hover:after {
+  opacity: 1;  
+  transform: scale(1.12);
+  transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
+}
+
+.social-media-list li:hover a {
+  background-color: #000;
+  color: #fff;
+}
+
+hr {
+  border-color: rgba(0, 0, 0, 0.6);
+}
+
+textarea.form-control{
+  width: 100%;
+  resize: vertical;
+  min-height: 50px;
+  max-height: 375px;
+  
+}
+
+.form-control {
+  font-family: 'Handjet';
+}
+
+.form-control, textarea {
+  color: #000; /* White text */
+  border: 1px solid #000; /*border*/
+  margin: 0 auto;
+}
+
+
+/* Begin Media Queries*/
+@media screen and (max-width: 850px) {
+  .contact-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .direct-contact-container, .form-horizontal {
+    margin: 0 auto;
+  }  
+  
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 300px;
+  }    
+  .social-media-list li {
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+  }
+  .social-media-list li:after {
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+  }
+}
+
+@media screen and (max-width: 569px) {
+
+  .direct-contact-container, .form-wrapper {
+    float: none;
+    margin: 0 auto;
+  }  
+  .form-control, textarea {
+    color: #000; /* White text */
+    border: 1px solid #fff; /*border*/
+    margin: 0 auto;
+  }
+ 
+  
+  .name, .email, textarea {
+    width: 280px;
+  } 
+  
+  .direct-contact-container {
+    margin-top: 60px;
+    max-width: 280px;
+  }  
+  .social-media-list {
+    left: 0;
+  }
+  .social-media-list li {
+    height: 55px;
+    width: 55px;
+    line-height: 55px;
+    font-size: 2rem;
+  }
+  .social-media-list li:after {
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+  }
+  
+}
+
+@media screen and (max-width: 410px) {
+  .send-button {
+    width: 99%;
+  }
+}
 /*For loading fonts*/
 @font-face {
   font-family: 'Handjet';
